--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_screenutil: ^5.9.0
   google_fonts: ^6.1.0
   data_table_2: ^2.5.8
+  omni_datetime_picker: ^1.0.9
 
 dev_dependencies:
   flutter_test:
